# emscripten-test

./: .gitignore  CMakeLists.txt  Makefile.toml  README.md
catch2_fetch_content_test/: CMakeLists.txt  README.md
catch2_fetch_content_test/tests/: test.cpp
simple-cpp/: CMakeLists.txt  README.md  build.sh
simple-cpp/src/: main.cpp
src/: main.cpp
tests/: test.cpp
